[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="BootLoader" type="VBoxContainer" parent="."]
margin_right = 1026.0
margin_bottom = 603.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestUI" type="Button" parent="BootLoader"]
margin_right = 1026.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Test UI"

[node name="ContentPrototyping" type="Button" parent="BootLoader"]
margin_top = 202.0
margin_right = 1026.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load Content Prototyping Tool"

[node name="Level1" type="Button" parent="BootLoader"]
margin_top = 404.0
margin_right = 1026.0
margin_bottom = 603.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load Level 1"
